--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
 
-  <title>WATS 3020: Mad Libs</title>
-  <meta name="description" content="WATS 3020 Mad Libs Assignment">
-  <meta name="author" content="Jane Student">
+  <title>Welcome to Looney Lips!</title>
+  <meta name="description" content="Looney Lips: A Mad Libs Experience">
+  <meta name="author" content="Andrew Asplund">
 
   <link rel="stylesheet" href="css/main.css">
 
