--- a/index.html
+++ b/index.html
@@ -10,24 +10,11 @@
 
     <link rel="stylesheet" href="css/main.css">
 
-    <script>
-        //This snippet randomly selects a script (by name) from an array. The scripts still have to exist in the js folder, though.
-        var JSFiles = ['main.js', 'dayinlife.js']; // put all the possible JS files to load.
-        function randomJS()
-        {
-            // pick a random file from the list in JSFiles
-            var index = Math.floor(Math.random()*JSFiles.length); 
-       
-            // Append JS file to head section.
-            var script = document.createElement('script');
-            script.src = 'js/' + JSFiles[index];
-            document.getElementsByTagName('head')[0].appendChild(script);
-        };
-    </script>
+    <script src="js/storyselect.js"></script>
 
 </head>
 
-<body onload="randomJS();">
+<body onload="storyChoose();">
     <h1 id="madlib-title">Now creating your story!</h1>
     <h2 id="madlib-author">by You!</h2>
 
