Added a new story.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 id="madlib-title">Now creating your story!</h1>
     <h2 id="madlib-author">by You!</h2>
 
-    <p id="madlib-text">Your story is being created! Pay attention to the prompts. If you don't see any prompts, try loading again.</p>
+    <div id="madlib-text">Your story is being created! Pay attention to the prompts. If you don't see any prompts, try loading again.</div>
     <hr>
     <p id="madlib-endnote"></p>
 </body>
